--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@clerk/nextjs": "^4.29.1",
     "@uploadthing/react": "^6.0.2",
     "mongose": "^0.0.2-security",
-    "next": "13.4.10",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.15.0",
@@ -25,7 +25,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
